OpenShift/client-greeter-template.yml
---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: client-greeter
  labels:
    deploymentConfig: client-greeter
    app: greeter-grpc
    version: 0.1
    service: client-greeter
spec:
  replicas: 1
  selector:
    deploymentConfig: client-greeter
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 120
      maxUnavailable: "10%"
  template:
    metadata:
      labels:
        deploymentConfig: client-greeter
        app: greeter-grpc
        version: 0.1
        service: client-greeter
      name: client-greeter
    spec:
      containers:
      - name: client-greeter
        image: client-greeter:0.1
        imagePullPolicy: Always
        ports: 
        - name: grpc
          containerPort: 5001
      restartPolicy: Always
      dnsPolicy: ClusterFirst
  triggers:
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - client-greeter
      from:
        kind: ImageStreamTag
        name: client-greeter:0.1

---
kind: Service
apiVersion: v1
metadata:
  name: client-greeter
  labels:
    app: greeter-grpc
    version: 0.1
    service: client-greeter
spec:
  ports:
  - name: grpc
    port: 5001
    targetPort: 5001
  selector:
    deploymentConfig: client-greeter
